<resources>
    <!--<string name=""></string>-->
    <string name="lora" translatable="false">Lora</string>
    <string name="usb" translatable="false">USB</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="app_name" translatable="false">SmartCollar</string>

    <!-- main -->
    <string name="main_text">Choose action</string>
    <string name="main_walk">Start walk</string>
    <string name="main_settings">Configure SmartCollar</string>
    <string name="main_map">Open map</string>

    <!-- walk -->
    <string name="walk_buttons_text">Select connection method</string>
    <string name="menu_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="baud_prompt" translatable="false">Choose Baudrate</string>
    <string-array name="baud_arrays">
        <item>300 baud</item>
        <item>1200 baud</item>
        <item>2400 baud</item>
        <item>4800 baud</item>
        <item>9600 baud</item>
        <item>19200 baud</item>
        <item>38400 baud</item>
        <item>576600 baud</item>
        <item>744880 baud</item>
        <item>115200 baud</item>
        <item>230400 baud</item>
        <item>250000 baud</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">SmartCollar</string>
    <string name="nav_header_subtitle">by Lambda</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About app</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>

    <string name="api_key">AIzaSyCo83Q17__qmeA6c4iVdjnQKzlaBtOAUrE</string>
</resources>
